 - distributed monitoring
 - LDAP authorisation (should work with MSWindows LDAP)
 - Agent for Windows (can we use nsclient?)
 - rename "Alerts" to "Notification"
 - add numeric constants to trigger expressions
 - get rid of problems with ' and "
 - think about service node types (some nodes will automatically register
  problem)

Changes for 1.0beta6:

 - support for parameters netloadin[*] and netloadout[*] (Alexei)
 - added src/zabbix_agent/stats.c and stats.h (Alexei)
 - added parameter StatFile to zabbix_agentd.conf (Alexei)
 - availability graph for IT Services (Alexei)
 - improvement in user rights handling routines (Alexei)
 - if trigger status is UNKNOWN, set function.lastvalue to NULL (Alexei)
 - fixed permission check for all *.php (Alexei)
 - Priority was renamed to Severity (Alexei)
 - added graph to availability report (Alexei)
 - added frontends/php/chart4.php (Alexei)
 - availability report will not show trigger expressions (Alexei)
 - added creation of table 'sessions' to migration scripts for 
 1.0beta4 (Alexei)
 - no dependency on register_globals in php.ini (Alexei)
 - zabbix_suckerd to write "Connection reset by peer" to LogFile
 (Alexei)
 - \n change to \r\n in send_email() (Alexei)
 - added table service_alarms (Alexei)
 - fixed problem with parsing of trigger expressions. [.-.] changed
 to - (Alexei)
 - support for function nodata() added (Alexei)
 - minimum number of zabbix_suckerd that can be started is 4 (Alexei)
 - simplified function update_triggers(). (Alexei)
 - fixed situation when Service is linked to a trigger. Service name is
   correct now. (Alexei)
 - support for new trigger function: str() (Alexei)
 - changed type of functions.parameter to varchar(255) (Alexei)
 - additional colors for graphs (Alexei)
 - in chart3.php: group by <complex expression> changed to group by 1
 (Alexei)
 - added housekeeping procedure for table sessions (Alexei)
 - changed width=\"X%\" to width=X% in *.php (Alexei)