@@ -12,6 +12,7 @@ CREATE TABLE hosts (
   port			int4		DEFAULT '0'		NOT NULL,
   status		int4		DEFAULT '0'		NOT NULL,
   disable_until		int4		DEFAULT '0'		NOT NULL,
+  network_errors	int4		DEFAULT '0'		NOT NULL,
   PRIMARY KEY (hostid)
 );
 
